--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -6,6 +6,11 @@
     overflow: hidden;
     border: 1px solid #5B5B5B;
     transition: border 0.15s;
+    color: white;
+}
+
+.card__link {
+    color: white;
 }
 
 .card__container:hover {
@@ -22,11 +27,29 @@
     height: 100%;
 }
 
-.card__text {
+.card__overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.756);
+    z-index: 5;
+}
+
+.card__text {
+    position: absolute;
+    z-index: 10;
+
+    bottom: 1rem;
+    left: 1rem;
+}
+
+.card__title {
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+.card__desc {
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 0.5);
 }
