--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -7,3 +7,4 @@
 <link rel="stylesheet" href="/assets/css/navbar.css">
 <link rel="stylesheet" href="/assets/css/header.css">
 <link rel="stylesheet" href="/assets/css/card.css">
+<link rel="stylesheet" href="/assets/css/section.css">
