basicaly finish everything until we get more backend in place

--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -2,9 +2,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LawlessRP.co - {{title}}</title>
+<meta name="description" content="Creating unique roleplay experiences.">
+<script defer src="/assets/fontawesome/all.min.js"></script>
+<script defer src="/assets/fontawesome/fontawesome.min.js"></script>
 <link rel="stylesheet" href="/assets/css/reset.css">
 <link rel="stylesheet" href="/assets/css/global.css">
 <link rel="stylesheet" href="/assets/css/navbar.css">
 <link rel="stylesheet" href="/assets/css/header.css">
 <link rel="stylesheet" href="/assets/css/card.css">
 <link rel="stylesheet" href="/assets/css/section.css">
+<link rel="stylesheet" href="/assets/css/footer.css">
+<link rel="stylesheet" href="/assets/css/socialcard.css">
