--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -4,9 +4,11 @@
     height: 15rem;
     border-radius: 10px;
     overflow: hidden;
-    border: 1px solid #5B5B5B;
+    border: 1px solid #5b5b5b;
     transition: border 0.15s;
     color: white;
+
+    pointer-events: none;
 }
 
 .card__link {
@@ -33,8 +35,16 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.756);
+    background: rgba(0, 0, 0, 0.75);
     z-index: 5;
+    backdrop-filter: blur(2px);
+    transition: backdrop-filter 0.15s, background 0.15s;
+    pointer-events: auto;
+}
+
+.card__overlay:hover {
+    backdrop-filter: none;
+    background: rgba(0, 0, 0, 0.6);
 }
 
 .card__text {
