--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -32,7 +32,7 @@
 
 .header__subtitle {
     font-size: 1rem;
-    color: rgba(255, 255, 255, 0.5)
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .header__background {
