--- a/src/index.njk
+++ b/src/index.njk
@@ -13,3 +13,13 @@ title: Home
         {% endfor %}
     </div>
 </div>
+
+
+<div class="section">
+    <h1 class="section__title">Community</h1>
+    <div class="section__content--grid">
+        {% for social in socials %}
+            {% SocialCard title=social.name, desc=social.desc, icon=social.icon, link=social.link %}
+        {% endfor %}
+    </div>
+</div>
