--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -16,5 +16,18 @@ a:hover {
 }
 
 hr {
-    border-top: 1px solid blue;
+    border-top: 1px solid white;
+}
+
+blockquote {
+    padding: 1rem;
+    border: 1px solid white;
+    border-radius: 10px;
+    font-weight: 400;
+    transition: background 0.15s, color 0.15s;
+}
+
+blockquote:hover {
+    background: white;
+    color: black;
 }
