footer change + make home redirect to the rules page

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,3 +1,4 @@
 <div class="footer">
     <p class="footer__text">© LawlessRP.co - 2023</p>
+    <p class="footer__text">Website made with 11ty by Lion</p>
 </div>
