--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ title: Home
     <h1 class="section__title">Servers</h1>
     <div class="section__content--flex">
         {% for server in servers %}
-            {% Card title=server.name, desc="0 / 128 • " + server.map, img=server.image, link="/" + server.slug + "/rules" %}
+            {% Card title=server.name, desc="unknown / 128 • " + server.map, img=server.image, link="/" + server.slug + "/rules" %}
         {% endfor %}
     </div>
 </div>
