many small updates

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,5 @@
 <div class="footer">
     <p class="footer__text">© LawlessRP.co - 2023</p>
     <p class="footer__text">Website made with 11ty by Lion</p>
+    <p class="footer__text">I should have just used bootstrap again...</p>
 </div>
