--- a/src/_includes/partials/navbar-stick.njk
+++ b/src/_includes/partials/navbar-stick.njk
@@ -6,6 +6,6 @@
   <div class="navbar__links">
     <a href="/#servers" class="navbar__link">Servers</a>
     <a href="https://donate.lawlessrp.co/" class="navbar__link">Shop</a>
-    <a href="/#ommunity" class="navbar__link">Community</a>
+    <a href="/#community" class="navbar__link">Community</a>
   </div>
 </nav>
