--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -3,7 +3,7 @@
         <div class="header__darken"></div>
         <div class="header__overlay">
             <p class="header__title">Creating a Unique Roleplay Experience</p>
-            <p class="header__subtitle">a fun roleplay experience, backed by a strong development team, and amazing staff</p>
+            <p class="header__subtitle">a fun roleplay experience, backed by a strong development team and amazing staff</p>
         </div>
     </div>
 </div>
