--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,6 +6,11 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 1rem;
+    margin-bottom: 0.25rem;
+}
+
 a {
     color: gold;
     text-decoration: none;
@@ -30,4 +35,10 @@ blockquote {
 blockquote:hover {
     background: white;
     color: black;
+}
+
+.container {
+    --margin: 2rem;
+    margin-left: var(--margin);
+    margin-right: var(--margin);
 }
