--- a/src/assets/css/section.css
+++ b/src/assets/css/section.css
@@ -21,6 +21,15 @@
     grid-template-columns: 1fr 1fr;
 }
 
+@media screen and (max-width: 1024px) {
+    .section__content--grid {
+        display: flex;
+        align-items: stretch;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
+
 /* The title of the section */
 .section__title {
     text-align: center;
