--- a/src/assets/css/socialcard.css
+++ b/src/assets/css/socialcard.css
@@ -5,6 +5,10 @@
     text-decoration: none;
 }
 
+.socialcard__link:hover {
+    text-decoration: none;
+}
+
 /* The things for the actial card */
 .socialcard {
     box-sizing: border-box;
@@ -20,7 +24,7 @@
 }
 
 .socialcard:hover {
-    border: 2px solid gold;
+    border: 1px solid gold;
     color: gold;
 }
 
