change colors to red, add some vars for themke

--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -39,5 +39,5 @@ nav {
 .navbar__link:hover {
     text-decoration: underline;
     text-underline-offset: 5px;
-    color: gold;
+    color: var(--primary);
 }
